2002-01-13  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (dispatch): Initialize $request->{modes} to an
	empty hashref.

	* lib/Mj/MailOut.pm (owner_done): Don't call bounce parser of
	'nobounce' mode is present.
	* lib/Mj/CommandProps.pm: Add nobounce mode to owner functions.

2002-01-13  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (dispatch): Add 'modes' member of the request
        structure.  This is a hash containing one key per mode present.
        Now you can check for a mode with if ($request->{modes}{whatever})
        instead of using a regexp.  You can still use the old method, of
        course.

2002-01-13  Todd Miller  <Todd.Miller@courtesan.com>

	* bin/mj_queueserv: Fix warning on exec if SIG_CHLD_IGNORE == 1.

2002-01-12  Todd Miller  <Todd.Miller@courtesan.com>

	* lib/Mj/Resend.pm (_describe_taboo): Fix warning on undef $match.

2002-01-11  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (list_config_set)  Add support for
	"noforce" mode, which will cause the configset command to
	fail if the new and old values are identical.

	* lib/Mj/Access.pm:  Add support for the "nostall" access
	variable, which will prevent a command from being delayed,
	because of an explicit delay, or because the command requires
	someone's approval.

	* lib/Mj/CommandProps.pm:  Add support for the "nostall"
	access variable and the "noforce" command mode.

	* lib/Mj/Config.pm:  (compile_pattern)  Add a third return
	value if a failure occurs, to stop warnings.  Thanks to
	Brock Rozen.

	* lib/Mj/Format.pm:  (configshow)  Use "noforce" command
	mode in the configset commands if it was requested.

	* lib/Mj/Util.pm:  (process_rule)  The rule set=VARNAME
	should establish a true value.

2001-12-21  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Bugfix:  Do not use "immediate" mode with "edit"
	mode in the get command.  Thanks to Roger Klorese.

2001-12-20  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_createlist, _set, _who)